--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "dependencies": {
     "@react-three/drei": "^9.78.2",
     "@react-three/fiber": "^8.13.5",
-    "@react-three/rapier": "^1.1.1",
+    "@react-three/rapier": "^1.0.0",
     "@types/react": "^18.2.15",
+    "@types/three":"^0.154.0",
     "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
