--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "prettier": "3.0.0",
+    "push-dir": "^0.4.1",
     "process": "^0.11.10",
     "shx": "0.3.3",
     "typescript": "5.1.6"
