--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "prettier": "3.0.0",
-    "push-dir": "^0.4.1",
     "process": "^0.11.10",
+    "push-dir": "^0.4.1",
     "shx": "0.3.3",
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@react-three/drei": "^9.78.2",
     "@react-three/fiber": "^8.13.5",
     "@react-three/rapier": "^1.0.0",
